# An-AI-powered-answer-evaluation-system-

./: .env  =0.3.0  LICENSE  README.md  apis.py  app.py  dataset.json  exception.py  logs.py  pyproject.toml  requirements.txt  setup.py  template.py  testing_model_withneo4j.py  train.py  train1.py
Exception/: __init__.py
logger/: __init__.py
research/: trials.ipynb
research/stream/: app.py  app1.py  db.py
research/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py
research/visualization/: ollama_evaluation_results.csv
src/ AI_Assisted_Assessment_System /logger/: __init__.py
src/AIAnswerEvaluationSystem/: Fetching.py  database_login_rigister.py  evaluting.py  llmss.py  main.py  neo4j_Manager.py  ocr.py  prompts.py  question_answer_store.py
src/AIAnswerEvaluationSystem.egg-info/: PKG-INFO  SOURCES.txt
src/AIAnswerEvaluationSystem/agents/: agentss.py
src/AIAnswerEvaluationSystem/config/: config.py
src/AIAnswerEvaluationSystem/llms/: llmss.py
src/AIAnswerEvaluationSystem/logger/: __init__.py
src/AIAnswerEvaluationSystem/prompt/: prompts.py
src/AIAnswerEvaluationSystem/tool/: Graph_Databases.py  ocrs.py
src/AI_Assisted_Assessment_System.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: answer.html  id.html  index.html  r.html
tests/: Final_train.py  apis.py  train.py  train2.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
